--- a/my-app/src/components/layout/header/index.css
+++ b/my-app/src/components/layout/header/index.css
@@ -1,23 +1,33 @@
-.header, .header-nav, .header-list {
-    display: flex;
+.header,
+.header-nav,
+.header-list {
+      display: flex;
 }
 
-.header, .header-nav {
-    align-items: center;
-    height: 10vh;
-    width: 60%;
+.header,
+.header-nav {
+      align-items: center;
+      height: 10vh;
+      width: 60%;
 }
 
 .header {
-    justify-content: right;
-    margin-left: auto;
+      justify-content: right;
+      margin-left: auto;
 }
 
 .header-list {
-    flex-direction: row;
-    justify-content: space-evenly;
-    width: 100%;
+      flex-direction: row;
+      justify-content: space-evenly;
+      width: 100%;
 }
-.header-list li{
-    font-weight: 700;
+
+.header-list li a {
+      text-decoration: none;
+      color: rgba(0, 0, 0, 0.692);
+      font-weight: 700;
+}
+
+.header-list li a:hover {
+      color: black;
 }
