--- a/my-app/src/components/currentObject/cardProject/index.css
+++ b/my-app/src/components/currentObject/cardProject/index.css
@@ -1,4 +1,4 @@
-.card-container {
+.project-card-container {
       display: flex;
       gap: 3vw;
       width: 70%;
@@ -7,12 +7,12 @@
       margin-bottom: 2%;
 }
 
-.card-container:not(:last-child) {
+.project-card-container:not(:last-child) {
       border-bottom: 1px #e0e0e0 solid;
       padding-bottom: 2%;
 }
 
-.card-content {
+.project-card-content {
       width: 80%;
       display: flex;
       flex-direction: column;
@@ -20,38 +20,43 @@
       gap: 8%;
 }
 
-.card-content h1 {
+.project-card-content h1 {
       font-size: 2.08vw;
       font-weight: 700;
 }
 
-.card-content small {
+.project-card-content small {
       font-size: 1.38vw;
       font-weight: 400;
       color: #8695a4;
 }
 
-.card-content p {
+.project-card-content p {
       font-size: 1.12vw;
       font-weight: 400;
 }
 
-.card-date {
+.project-card-date {
       font-size: 1.25vw;
-      font-weight: 400;
+      font-weight: 900;
 }
 
-.card-list-tags,
-.card-list-desc {
+.project-card-list-tags,
+.project-card-list-desc {
       display: flex;
       flex-direction: row;
       align-items: center;
 }
 
-.card-list-tags {
+.project-card-list-tags {
       justify-content: space-between;
 }
 
-.card-list-desc {
+.project-card-list-tags span {
+      font-size: 1.25vw;
+      font-weight: 400;
+}
+
+.project-card-list-desc {
       gap: 4%;
 }
