--- a/my-app/src/components/layout/footer/index.css
+++ b/my-app/src/components/layout/footer/index.css
@@ -2,13 +2,33 @@
 .footer-nav,
 .footer-list {
       display: flex;
+      flex-direction: column;
+}
+
+.footer-list-link {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      width: 20%;
+}
+
+.footer-nav li a {
+      text-decoration: none;
+      color: black;
+}
+
+.footer-list-link li svg {
+      height: 30px;
+      width: 30px;
 }
 
 .footer,
 .footer-nav {
       align-items: center;
-      height: 10vh;
+      height: 25vh;
       width: 100%;
+      display: flex;
+      justify-content: space-around;
 }
 
 /* .footer {
