--- a/my-app/src/pages/homepage/index.css
+++ b/my-app/src/pages/homepage/index.css
@@ -15,3 +15,16 @@
       height: 400px;
       align-items: center;
 }
+
+.project-section {
+      margin-top: 2%;
+}
+.section-project-title {
+      font-size: 1.52vw;
+      font-weight: 400;
+      width: 70%;
+      margin-left: auto;
+      margin-right: auto;
+      text-align: left;
+      margin-bottom: 2%;
+}
